[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://GFX/Static/Player_idle.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.36656, 7.80907 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 1, 4, 1 )
flag_disable_z = true
spread = 11.67
gravity = Vector3( 0, 8.73, 0 )
initial_velocity = 24.7
initial_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 25.11
damping_random = 0.34

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.01, 0 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="DashParticles" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( 1.38247, 2.21195 )
emitting = false
amount = 10
one_shot = true
explosiveness = 0.68
randomness = 1.0
draw_order = 1
process_material = SubResource( 3 )

[node name="DashCoolDown" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="DashCoolDown" to="." method="_on_DashCoolDown_timeout"]
